Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -597,19 +597,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression(C=1000000000000000.0, class_weight=None, dual=False,\n",
        "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
-       "          multi_class='ovr', n_jobs=1, penalty='l2', random_state=None,\n",
-       "          solver='liblinear', tol=0.0001, verbose=0, warm_start=False)"
+       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+       "          solver='warn', tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,17 +630,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-4.38706343,  0.96178902,  0.14397983, -0.14384057,  0.83689457,\n",
+       "array([[-4.3870634 ,  0.961789  ,  0.1439798 , -0.14384063,  0.83689455,\n",
        "         1.2067121 ,  0.03871011]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
